v0.0.1alpha/_sources/_as_gen/uvex_transients.transients.supernovae.TypeIbSNe.rst.txt
TypeIbSNe
===============================================

.. currentmodule:: uvex_transients.transients.supernovae

.. autoclass:: uvex_transients.transients.supernovae.TypeIbSNe

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
      :recursive:
   
      ~TypeIbSNe.event_rate
      ~TypeIbSNe.registry
      ~TypeIbSNe.sample_event_count
      ~TypeIbSNe.sample_event_redshift
      ~TypeIbSNe.sample_events_on_healpix_grid
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
      :recursive:
   
      ~TypeIbSNe.DEFAULT_DURATION
      ~TypeIbSNe.DEFAULT_Z_GRID_SIZE
      ~TypeIbSNe.DEFAULT_Z_LIM
      ~TypeIbSNe.cosmology
      ~TypeIbSNe.duration_limit
      ~TypeIbSNe.integrated_event_rate
      ~TypeIbSNe.luminosity_distance_grid
      ~TypeIbSNe.redshift_grid
      ~TypeIbSNe.redshift_grid_size
      ~TypeIbSNe.redshift_limit
      ~TypeIbSNe.sed
   
   