v0.0.5alpha/_sources/_as_gen/uvex_transients.transients.supernovae.TypeIbSNe.rst.txt
TypeIbSNe
===============================================

.. currentmodule:: uvex_transients.transients.supernovae

.. autoclass:: uvex_transients.transients.supernovae.TypeIbSNe

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
      :recursive:
   
      ~TypeIbSNe.compute_all_sky_yield
      ~TypeIbSNe.compute_all_sky_yield_ci
      ~TypeIbSNe.event_rate
      ~TypeIbSNe.rate_shape
      ~TypeIbSNe.registry
      ~TypeIbSNe.sample_event_count
      ~TypeIbSNe.sample_event_redshift
      ~TypeIbSNe.sample_events_on_healpix_grid
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
      :recursive:
   
      ~TypeIbSNe.DEFAULT_DURATION
      ~TypeIbSNe.DEFAULT_Z_GRID_SIZE
      ~TypeIbSNe.DEFAULT_Z_LIM
      ~TypeIbSNe.RATE_CI
      ~TypeIbSNe.RATE_FRACTION
      ~TypeIbSNe.all_sky_rate
      ~TypeIbSNe.all_sky_rate_ci
      ~TypeIbSNe.cosmology
      ~TypeIbSNe.duration_limit
      ~TypeIbSNe.effective_volume
      ~TypeIbSNe.integrated_rate
      ~TypeIbSNe.integrated_rate_ci
      ~TypeIbSNe.luminosity_distance_grid
      ~TypeIbSNe.rate
      ~TypeIbSNe.rate_ci
      ~TypeIbSNe.redshift_grid
      ~TypeIbSNe.redshift_grid_size
      ~TypeIbSNe.redshift_limit
      ~TypeIbSNe.sed
   
   